[package]
name = "infinite-minesweeper"
version = "1.0.1"
edition = "2018"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.3"
speedy2d = "1.1.0"
